[package]
name = "prime-puppet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prime_puppet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
puppet = { path = "../puppet", features = ["cpi"]}
anchor-lang = "0.27.0"
